/cp 2009-03-17  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/39475
	* semantics.c (check_trait_type): New.
	(finish_trait_expr): Use it.

/testsuite
2009-03-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/39475
	* g++.dg/ext/unary_trait_incomplete.C: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144919 138bc75d-0d04-0410-961f-82ee72b054a4